--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
+    "csv-parse": "^5.0.4",
     "express": "^4.17.1",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -24,7 +29,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2",
-    "@types/uuid": "^8.3.3"
+    "typescript": "^4.5.2"
   }
 }
