--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@types/csv-parse": "^1.2.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "csv-parse": "^5.0.4",
     "express": "^4.17.1",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
