--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@types/csv-parse": "^1.2.2",
     "@types/swagger-ui-express": "^4.1.3",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.4",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -21,7 +24,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
